crates/toml_edit/tests/snapshots/invalid/integer/incomplete-hex.stderr
TOML parse error at line 1, column 18
  |
1 | incomplete-hex = 0x
  |                  ^^
integer number overflowed
